<resources>
<string name="app_name">Teamwise</string>

    <!-- errors strings -->
    <string name="connectivity_error">There was a connectivity error. Please check your connection before continue.</string>
    <string name="server_error">No way! There was a server error:\n</string>
    <string name="unknown_error">No way! There was an unknown error:\n</string>

    <!-- menus names -->
    <string name="menu_teams">Teams</string>
    <string name="menu_players">Players</string>
    <string name="menu_stadiums">Stadiums</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_info">App Info</string>
    <string name="menu_me">About me</string>

    <!-- screens titles -->
    <string name="main_title">Teams</string>
    <string name="info_title">App information</string>
    <string name="team_title">Team</string>
    <string name="players_title">Players</string>
    <string name="me_title">About me</string>

    <!-- screen: teams -->
    <string name="teams_main_header">You can use the toolbar icons to request teams from your location or request it by some filters. Also, click on a team on the list to see their details. Additionally, your favorite teams will be sort first.</string>
    <string name="teams_filter_submit">submit</string>
    <string name="teams_filter_clear">clear</string>
    <string name="teams_filters_show">Show filters</string>
    <string name="teams_search_menu_item">Search</string>
    <string name="teams_list_header_example_text">Teams (1234)</string>
    <string name="teams_not_results_found">No teams found in local database.\nPlease, use the toolbar icons to get them.</string>
    <string name="teams_search_bar">SEARCH</string>
    <string name="teams_location_bar">Get location</string>

    <!-- general words -->
    <string name="country">Country</string>
    <string name="england">England</string>
    <string name="league">League</string>
    <string name="premier_league">Premier League</string>
    <string name="season">Season</string>
    <string name="season_value">2021</string>

    <!-- screen: app info -->
    <string name="app_info_txt_1">This app is used to demo all my Android skills after the Architect Coders 2.0 expertise. Initially, teamwise was born to allow a team to have all their own data easily.\n\nToday, it is just a boilerplate that collects: Clean Architecture, Navigation Component, State Flow, Room Database, Testing and so on.\n\nThis is just the start point, let\'s rock it!</string>
    <string name="app_info_txt_2">©® Architect Coders by Antonio Leiva\nDeveloped by: Eduardo Calzado</string>

    <!-- screen: stats -->
    <string name="details_team_info">TEAM DATA</string>
    <string name="details_team_info_name">NAME</string>
    <string name="details_team_info_code">CODE</string>
    <string name="details_team_info_founded">FOUNDED</string>
    <string name="details_team_info_country">COUNTRY</string>
    <string name="details_team_stadium">STADIUM</string>
    <string name="details_team_stadium_street">ADDRESS</string>
    <string name="details_team_stadium_surface">SURFACE</string>
    <string name="details_team_stadium_capacity">CAPACITY</string>
    <string name="details_team_stadium_name">NAME</string>
    <string name="details_stats_league">LEAGUE</string>
    <string name="details_stats_league_name">NAME</string>
    <string name="details_stats_league_country">COUNTRY</string>
    <string name="details_stats_fixtures">FIXTURES</string>
    <string name="details_stats_fixtures_draws">DRAWS</string>
    <string name="details_stats_fixtures_wins">WINS</string>
    <string name="details_stats_fixtures_loses">LOSES</string>
    <string name="details_button_view_players">SQUAD</string>

    <!-- screen: player -->
    <string name="players_not_results_found">No players found neither in database nor remote API. Please, try it again later.</string>

    <!-- screen: player -->
    <string name="player_title">Player</string>
    <string name="player_data">PLAYER DATA</string>
    <string name="player_data_first_name">FIRST NAME</string>
    <string name="player_data_last_name">LAST NAME</string>
    <string name="player_data_age">AGE</string>
    <string name="player_data_nationality">NATIONALITY</string>
    <string name="player_data_height">HEIGHT</string>
    <string name="player_data_weight">WEIGHT</string>
    <string name="player_data_injured">INJURED</string>
    <string name="player_stats">PLAYER STATS</string>

    <!-- others -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown">Unknown</string>
    <string name="overline">OVERLINE</string>
    <string name="two_line_item">Two line item</string>
    <string name="header">Header</string>

    <!-- arrays -->
    <string-array name="countries">
        <item>England</item>
        <item>Spain</item>
        <item>Italy</item>
    </string-array>
    <string-array name="seasons">
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
    </string-array>
    <string-array name="england_leagues">
        <item>Premier League</item>
        <item>EFL Championship</item>
        <item>EFL One</item>
    </string-array>
    <string-array name="spanish_leagues">
        <item>La Liga</item>
        <item>Segunda Division</item>
        <item>Primera Division RFEF - Group 1</item>
        <item>Primera Division RFEF - Group 2</item>
    </string-array>
    <string-array name="italy_leagues">
        <item>Serie A</item>
        <item>Serie B</item>
        <item>Serie C</item>
    </string-array>
</resources>