<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_search_team"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/teams_search_bar"
        app:iconTint="@color/white"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/main_location"
        android:enabled="true"
        android:icon="@drawable/ic_location"
        android:title="@string/teams_location_bar"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/show_filters"
        android:enabled="true"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/teams_filters_show"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>