<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/main_dest">

    <fragment
        android:id="@+id/main_dest"
        android:name="es.eduardocalzado.teamwise.ui.main.teams.MainFragment"
        android:label="@string/main_title"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_main_to_detail"
            app:destination="@id/detail_dest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/info_dest"
        android:name="es.eduardocalzado.teamwise.ui.main.info.InfoFragment"
        android:label="@string/info_title"
        tools:layout="@layout/fragment_info">
    </fragment>
    <fragment
        android:id="@+id/detail_dest"
        android:name="es.eduardocalzado.teamwise.ui.detail.stats.DetailFragment"
        android:label="@string/team_title"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="teamId"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="leagueId"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="seasonId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
    <fragment
        android:id="@+id/players_dest"
        android:name="es.eduardocalzado.teamwise.ui.detail.players.TeamPlayersFragment"
        android:label="@string/players_title"
        tools:layout="@layout/fragment_players" >
        <argument
            android:name="teamPlayerId"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="seasonPlayerId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
</navigation>