<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    <import type="es.eduardocalzado.teamwise.domain.TeamStats"/>
    <variable
        name="teamStats"
        type="es.eduardocalzado.teamwise.domain.TeamStats" />
    </data>

    <LinearLayout
        android:id="@+id/fragment_detail_items_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/fragment_detail_items_layout_league"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_stats_league"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_stats_league_name"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{teamStats.league_name}"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_stats_league_country"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{teamStats.league_country}"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/fragment_detail_items_layout_fixtures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_stats_fixtures"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_stats_fixtures_draws"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:value="@{teamStats.fixture_draws_total}"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_stats_fixtures_loses"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:value="@{teamStats.fixture_loses_total}"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_stats_fixtures_wins"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:value="@{teamStats.fixture_wins_total}"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>